--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello world.</p>
+   <div class="banner1">
+    <img src="resources/Banner Image.png" alt="">
+    <h4 class="newy">Happy New Year</h4>
+    <h2 class="newy2">New Year Party Celebration</h2>
+   </div>
 </body>
 </html>
