--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 <body>
    <div class="banner1">
     <img src="resources/Banner Image.png" alt="">
+    <div class="textarea">
     <h4 class="newy">Happy New Year</h4>
-    <h2 class="newy2">New Year Party Celebration</h2>
+    <h2 class="newy2">New Year Party <br> Celebration</h2>
+</div>
+   </div>
+   <div class="section">
+    <p class="text">65% OFF</p>
+    <p class="text2">OUR HOLIDAY DEALS ARE BETTER</p>
+    <h2 class="title">ALL CATEGORIES</h2>
+    <div class="img2">
+        <img src="resources/New Year Photo.png" alt="">
+    </div>
    </div>
 </body>
 </html>
