--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="banner1">
-    <img src="resources/Banner Image.png" alt="">
     <div class="textarea">
     <h4 class="newy">Happy New Year</h4>
     <h2 class="newy2">New Year Party <br> Celebration</h2>
@@ -20,6 +22,12 @@
     <h2 class="title">ALL CATEGORIES</h2>
     <div class="img2">
         <img src="resources/New Year Photo.png" alt="">
+    </div>
+   </div>
+   <div class="content2">
+    <div class="textarea2">
+        <h2 class="cel">Welcome to midnight party</h2>
+        <p class="cont">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
     </div>
    </div>
 </body>
