--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
    </div>
    <div class="content2">
     <div class="textarea2">
-        <h2 class="cel">Welcome to midnight party</h2>
-        <p class="cont">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <h2 class="cel">Welcome to <br>midnight party</h2>
+        <p class="cont">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <a href="#" class="link">JOIN NOW</a>
     </div>
+    <img src="resources/Group 70.png" alt="" class="ing">
    </div>
 </body>
 </html>
