--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
     </div>
     <img src="resources/Group 70.png" alt="" class="ing">
    </div>
+   <div class="date">
+    <div class="time">
+    <p><samp style="color: red;">Place:</samp> New Park Hotel</p>
+    <p><samp style="color: red;">Date:</samp> 31 December Night 2023</p>
+    <p><samp style="color: red;">Time:</samp>Evening 7.30 PM To 12.30 AM</p>
+    <button style="background-color: red; color: aliceblue; border: 0; border-radius: 10px; padding: 15px 20px; font-size: 20px; font-weight: 600; margin-top: 20px;">JOIN NOW</button>
+    </div>
+   </div>
 </body>
 </html>
