--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
     <button style="background-color: red; color: aliceblue; border: 0; border-radius: 10px; padding: 15px 20px; font-size: 20px; font-weight: 600; margin-top: 20px;">JOIN NOW</button>
     </div>
    </div>
+   <div class="content3">
+    <div class="dolor">
+    <h3 class="of" style="color: red;">NEW BEST OFFER</h3>
+    <h1 class="soon" style="font-size: 40px; font-weight: 700;">Coming Soon</h1>
+    <p class="lec">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>molestie malesuada. Ipsum sed sodales <br>risus ut pellentesque vel euismod. </p>
+</div>
+    <div class="img-2">
+        <img src="resources/Ellipse 1.png" alt="" id="what1">
+    </div>
+    <div class="content-4">
+        <h2 class="year" style="color: red; font-size: 40px;">2024</h2>
+        <p class="line">Dolor sit amet consectetur. <br> Consequat eget consectetur maecenas sed.</p>
+        <img src="resources/Group 96.png" alt="" height="100px" width="100px" class="hey">
+    </div>
+   </div>
 </body>
 </html>
