--- a/index.html
+++ b/index.html
@@ -44,15 +44,27 @@
     <div class="dolor">
     <h3 class="of" style="color: red;">NEW BEST OFFER</h3>
     <h1 class="soon" style="font-size: 40px; font-weight: 700;">Coming Soon</h1>
-    <p class="lec">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>molestie malesuada. Ipsum sed sodales <br>risus ut pellentesque vel euismod. </p>
+    <p class="lec">Dolor sit amet consectetur. Consequat eget consectetur maecenas <br> sed molestie malesuada. Ipsum sed sodales <br>risus ut pellentesque vel euismod. </p>
 </div>
     <div class="img-2">
         <img src="resources/Ellipse 1.png" alt="" id="what1">
     </div>
     <div class="content-4">
         <h2 class="year" style="color: red; font-size: 40px;">2024</h2>
-        <p class="line">Dolor sit amet consectetur. <br> Consequat eget consectetur maecenas sed.</p>
+        <p class="line">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
         <img src="resources/Group 96.png" alt="" height="100px" width="100px" class="hey">
+    </div>
+   </div>
+   <div class="content-5">
+    <div class="moye">
+        <h4>WHAT IS FUNCTIONAL</h4>
+        <h1 style="font-size: 40px;"><samp style="color: red;">Holidays</samp> Sale 50%</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam <br>id fermentum amet amet sit consectetur.</p>
+    </div>
+    <div class="fly">
+        <img src="resources/Group 75.png" alt="" style="object-position: left;">
+        <img src="resources/Rectangle 1.png" alt="" width="400" height="435">
     </div>
    </div>
 </body>
