--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="shortcut icon" href="resources/download.png" type="image/x-icon">
 </head>
 <body>
    <div class="banner1">
@@ -64,8 +66,52 @@
     </div>
     <div class="fly">
         <img src="resources/Group 75.png" alt="" style="object-position: left;">
-        <img src="resources/Rectangle 1.png" alt="" width="400" height="435">
+        <img src="resources/Rectangle 1.png" alt="" width="320px" height="385px">
     </div>
    </div>
+   <div class="products">
+    <h2 style="color: red;">THE BEST GIFTS</h2>
+    <h1 style="font-size: 35px;">Our Awesome Portfolio</h1>
+    <p style="font-size: 18px;">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod.</p>
+    <div class="items">
+        <img src="resources/Rectangle 3.png" alt="" width="510px" height="600px">
+        <img src="resources/Rectangle 4.png" alt="" width="510px" height="600px">
+        <img src="resources/Rectangle 5.png" alt="" width="510px" height="600px">
+    </div>
+    <div class="items2">
+        <img src="resources/Rectangle 6.png" alt="" width="510px" height="600px">
+        <img src="resources/Rectangle 7.png" alt="" width="510px" height="600px">
+        <img src="resources/Rectangle 8.png" alt="" width="510px" height="600px">
+    </div>
+   </div>
+   <div class="mail">
+    <img src="resources/Group 61.png" alt="" class="note">
+    <div class="mail-2">
+        <h1 style="text-align: center;">Subscribe Newsletter</h1>
+        <p style="text-align: center;">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+    </div>
+    <form class="email">
+        <input type="email" name="" id="" placeholder="User@gmail.com" class="g">
+        <button class="b">Subscribe</button>
+    </form>
+   </div>
+   <footer class="footer">
+    <div class="foot">
+    <p>44, Big Building Roosevelt Street <br>
+        Beach Gardens Florida 33410</p>
+        <p><i class="fa-solid fa-phone"></i> +00 123 584 124<br>
+        <a href="#" class="p1"><i class="fa-brands fa-edge"></i> www.website.com</a></p>
+    </div>
+    <div class="foot2">
+        <img src="resources/Facebook.png" alt="">
+        <img src="resources/Instagram.png" alt="">
+        <img src="resources/Linkedin.png" alt="">
+        <img src="resources/Twitter.png" alt="">
+    </div>
+    <div class="footer1">
+        <p>&copy;2017, All Rights Reserved.</p>
+        <p>Unsubscribe</p>
+    </div>
+   </footer>
 </body>
 </html>
